-
Bug
-
-
Major
-
Resolution:
Fixed
-
10.6
-
-
-
Streaming replication combined with innodb_snapshot_isolation
CREATE TABLE t1 (f1 INTEGER PRIMARY KEY);
|
SET SESSION wsrep_trx_fragment_size=1;
|
SET SESSION innodb_snapshot_isolation=ON;
|
START TRANSACTION WITH CONSISTENT SNAPSHOT;
|
INSERT INTO t1 VALUES (1);
|
COMMIT;
|
leads to the following error (and assertion in debug builds):
2024-10-29 9:45:05 12 [ERROR] WSREP: init_for_index_scan failed to read first record, error 123
|
mariadbd: /home/sciascid/Workspace/src/mariadb-server/wsrep-lib/src/transaction.cpp:382: int wsrep::transaction::before_prepare(wsrep::unique_lock<wsrep::mutex>&): Assertion `state() == s_pr
|
eparing || (is_xa() && state() == s_replaying) || (ret && (state() == s_must_abort || state() == s_must_replay || state() == s_cert_failed || state() == s_aborted))' failed.
|
241029 9:45:05 [ERROR] mysqld got signal 6 ;
|
- split from
-
MDEV-35140
Support innodb-snapshot-isolation in Galera cluster
-
-
Stalled
Transition |
Time In Source Status |
Execution Times |
Open |
|
Closed |
|
30d 23h 7m
|
1
|
{"report":{"fcp":835,"ttfb":212.29999999701977,"pageVisibility":"visible","entityId":131390,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"10626749-f3d1-444f-963b-21af309c0b77","navigationType":0,"readyForUser":905.5999999940395,"redirectCount":0,"resourceLoadedEnd":930,"resourceLoadedStart":217.29999999701977,"resourceTiming":[{"duration":56.29999999701977,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2bv2/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":217.29999999701977,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":217.29999999701977,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":273.59999999403954,"responseStart":0,"secureConnectionStart":0},{"duration":56.29999999701977,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2bv2/820016/12ta74/2380add21a9a1006587582385952de73/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":217.59999999403954,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":217.59999999403954,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":273.8999999910593,"responseStart":0,"secureConnectionStart":0},{"duration":111.8999999910593,"initiatorType":"script","name":"https://jira.mariadb.org/s/e9b27a47da5fb0f74a35acd57e9847fb-CDN/lu2bv2/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":217.70000000298023,"connectEnd":217.70000000298023,"connectStart":217.70000000298023,"domainLookupEnd":217.70000000298023,"domainLookupStart":217.70000000298023,"fetchStart":217.70000000298023,"redirectEnd":0,"redirectStart":0,"requestStart":217.70000000298023,"responseEnd":329.59999999403954,"responseStart":329.59999999403954,"secureConnectionStart":217.70000000298023},{"duration":184.20000000298023,"initiatorType":"script","name":"https://jira.mariadb.org/s/c32eb0da7ad9831253f8397e6cc26afd-CDN/lu2bv2/820016/12ta74/2380add21a9a1006587582385952de73/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":217.8999999910593,"connectEnd":217.8999999910593,"connectStart":217.8999999910593,"domainLookupEnd":217.8999999910593,"domainLookupStart":217.8999999910593,"fetchStart":217.8999999910593,"redirectEnd":0,"redirectStart":0,"requestStart":217.8999999910593,"responseEnd":402.09999999403954,"responseStart":402.09999999403954,"secureConnectionStart":217.8999999910593},{"duration":187.79999999701977,"initiatorType":"script","name":"https://jira.mariadb.org/s/bc0bcb146314416123c992714ee00ff7-CDN/lu2bv2/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":218,"connectEnd":218,"connectStart":218,"domainLookupEnd":218,"domainLookupStart":218,"fetchStart":218,"redirectEnd":0,"redirectStart":0,"requestStart":218,"responseEnd":405.79999999701977,"responseStart":405.79999999701977,"secureConnectionStart":218},{"duration":187.90000000596046,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bv2/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":218.29999999701977,"connectEnd":218.29999999701977,"connectStart":218.29999999701977,"domainLookupEnd":218.29999999701977,"domainLookupStart":218.29999999701977,"fetchStart":218.29999999701977,"redirectEnd":0,"redirectStart":0,"requestStart":218.29999999701977,"responseEnd":406.20000000298023,"responseStart":406.20000000298023,"secureConnectionStart":218.29999999701977},{"duration":188,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bv2/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":218.5,"connectEnd":218.5,"connectStart":218.5,"domainLookupEnd":218.5,"domainLookupStart":218.5,"fetchStart":218.5,"redirectEnd":0,"redirectStart":0,"requestStart":218.5,"responseEnd":406.5,"responseStart":406.5,"secureConnectionStart":218.5},{"duration":252.8999999910593,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2bv2/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":218.70000000298023,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":218.70000000298023,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":471.59999999403954,"responseStart":0,"secureConnectionStart":0},{"duration":188.1000000089407,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":218.8999999910593,"connectEnd":218.8999999910593,"connectStart":218.8999999910593,"domainLookupEnd":218.8999999910593,"domainLookupStart":218.8999999910593,"fetchStart":218.8999999910593,"redirectEnd":0,"redirectStart":0,"requestStart":218.8999999910593,"responseEnd":407,"responseStart":407,"secureConnectionStart":218.8999999910593},{"duration":252.79999999701977,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2bv2/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":219,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":219,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":471.79999999701977,"responseStart":0,"secureConnectionStart":0},{"duration":188.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/719848dd97ebe0663199f49a3936487a-CDN/lu2bv2/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":219.09999999403954,"connectEnd":219.09999999403954,"connectStart":219.09999999403954,"domainLookupEnd":219.09999999403954,"domainLookupStart":219.09999999403954,"fetchStart":219.09999999403954,"redirectEnd":0,"redirectStart":0,"requestStart":219.09999999403954,"responseEnd":407.59999999403954,"responseStart":407.59999999403954,"secureConnectionStart":219.09999999403954},{"duration":380,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bv2/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":224.20000000298023,"connectEnd":224.20000000298023,"connectStart":224.20000000298023,"domainLookupEnd":224.20000000298023,"domainLookupStart":224.20000000298023,"fetchStart":224.20000000298023,"redirectEnd":0,"redirectStart":0,"requestStart":224.20000000298023,"responseEnd":604.2000000029802,"responseStart":604.2000000029802,"secureConnectionStart":224.20000000298023},{"duration":641.0999999940395,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bv2/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":224.29999999701977,"connectEnd":224.29999999701977,"connectStart":224.29999999701977,"domainLookupEnd":224.29999999701977,"domainLookupStart":224.29999999701977,"fetchStart":224.29999999701977,"redirectEnd":0,"redirectStart":0,"requestStart":224.29999999701977,"responseEnd":865.3999999910593,"responseStart":865.3999999910593,"secureConnectionStart":224.29999999701977},{"duration":121.70000000298023,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":483.3999999910593,"connectEnd":483.3999999910593,"connectStart":483.3999999910593,"domainLookupEnd":483.3999999910593,"domainLookupStart":483.3999999910593,"fetchStart":483.3999999910593,"redirectEnd":0,"redirectStart":0,"requestStart":483.3999999910593,"responseEnd":605.0999999940395,"responseStart":605.0999999940395,"secureConnectionStart":483.3999999910593},{"duration":190.6000000089407,"initiatorType":"link","name":"https://jira.mariadb.org/s/d5715adaadd168a9002b108b2b039b50-CDN/lu2bv2/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/css/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":739.3999999910593,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":739.3999999910593,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":930,"responseStart":0,"secureConnectionStart":0}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":59,"responseStart":212,"responseEnd":219,"domLoading":216,"domInteractive":952,"domContentLoadedEventStart":952,"domContentLoadedEventEnd":989,"domComplete":1215,"loadEventStart":1215,"loadEventEnd":1216,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":941.5999999940395},{"name":"bigPipe.sidebar-id.end","time":942.5},{"name":"bigPipe.activity-panel-pipe-id.start","time":942.5999999940395},{"name":"bigPipe.activity-panel-pipe-id.end","time":943.3999999910593},{"name":"activityTabFullyLoaded","time":1003.8999999910593}],"measures":[],"correlationId":"682c67f4d5f6d2","effectiveType":"4g","downlink":9.6,"rtt":0,"serverDuration":96,"dbReadsTimeInMs":13,"dbConnsTimeInMs":20,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}